<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/menu" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/record_name"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/record_name"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coin_symbol"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/coin"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/buyed_price"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/buyed_price"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/buyed_unit"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/buyed_unit"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/save" />
    </LinearLayout>
</layout>